[tool.poetry]
name = "hsmb"
version = "0.1.0"
description = "Core components for the SMB protocol"
authors = ["Jordan Borean <jborean93@gmail.com>"]
license = "MIT"
keywords = ["smb", "cifs", "samba", "hyper"]
readme = "README.md"
homepage = "https://github.com/jborean93/hsmb"
include = [
    "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = "^3.6.2"
cryptography = "^3.4.8"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "xunit2"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = sanity,py36,py37,py38,py39
skip_missing_interpreters = true
isolated_build = True

[testenv]
whitelist_externals =
    poetry

commands_pre =
    poetry install

commands =
    poetry run python -m pytest -v --cov hsmb --cov-report term-missing

[testenv:sanity]
commands =
    poetry run python -m black . --check
    poetry run python -m isort . --check-only
    poetry run python -m mypy .
"""
